2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): file transfer
	dialog now uses GFiles internally, so update the caller

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* theme-installer.c (cleanup_tmp_dir):
	* theme-util.c (theme_delete): Fix build for the previous change

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* theme-util.c:
	* theme-util.h: Remove the directory deletion helpers, and
	move them to the common sub-directory

2008-07-20  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): don't delete ~/.icons when deleting
	the last icon theme (bug #543763)

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 533611 - add notification themes to the metatheme format

	* appearance-themes.c: When loading a metatheme from GConf, read
	the notification theme from /apps/notification-daemon/theme.

	* appearance-theme-save.c: When saving a metatheme to disk,
	save the notification theme with the key NotificationTheme.

	* appearance-theme-util.h: Add a define for the GConf key
	used for notification theme.

2008-06-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* appearance-main.c: (main):
	* data/gnome-appearance-properties.desktop.in.in: use standard icon
	name from the icon naming spec (bug #539339)

2008-06-01  Thomas Wood  <thos@gnome.org>

	* appearance-desktop.c: (wp_props_wp_selected), (wp_load_stuffs),
	(wp_select_after_realize), (desktop_init), (desktop_shutdown):

	Delay the creation of the wallpaper file chooser dialog to save time on
	start up.

Sat May 31 02:05:32 2008  Søren Sandmann  <sandmann@redhat.com>

	* appearance-desktop.c (wp_drag_get_data): Make sure the data we
	produce is actually a list of uris, not a list of paths. (Prevents
	crash when someone drags a thumbnail back into the list).
	
	* appearance-desktop.c (wp_add_image): Be robust against NULL
	filenames; this can happen if someone drops an http url on the
	dialog.
